--- a/.env
+++ b/.env
@@ -9,6 +9,13 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=electivefinals
+# DB_USERNAME=root
+# DB_PASSWORD=
+
 DB_CONNECTION=mysql
 DB_HOST=electivefinals.cx2mkka80ug2.ap-southeast-2.rds.amazonaws.com
 DB_PORT=3306
@@ -38,10 +45,10 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_ACCESS_KEY_ID=AKIAXYKJVUCDIXHFRZMO
+AWS_SECRET_ACCESS_KEY=xM0LcTXkPJZndZqGRIJvZul2lyx/Gb705lSh30zV
+AWS_DEFAULT_REGION=ap-southeast-2
+AWS_BUCKET=electivefinals
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
