--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "league/flysystem-aws-s3-v3": "^1.0",
-        "aws/aws-sdk-php": "^3.0",
         "a1comms/php-gds": "^4.2",
+        "aws/aws-sdk-php": "^3.0",
         "barryvdh/laravel-dompdf": "^2.2",
         "delfimov/gdimage": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.5"
+        "laravel/ui": "^4.5",
+        "league/flysystem-aws-s3-v3": "^3.28"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
