--- a/.env
+++ b/.env
@@ -9,19 +9,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=electivefinals
-# DB_USERNAME=root
-# DB_PASSWORD=
-
 DB_CONNECTION=mysql
-DB_HOST=electivefinals.cx2mkka80ug2.ap-southeast-2.rds.amazonaws.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=electivefinals
-DB_USERNAME=admin
-DB_PASSWORD=Electivefinals
+DB_USERNAME=root
+DB_PASSWORD=
+
+# DB_CONNECTION=mysql
+# DB_HOST=electivefinals.cx2mkka80ug2.ap-southeast-2.rds.amazonaws.com
+# DB_PORT=3306
+# DB_DATABASE=electivefinals
+# DB_USERNAME=admin
+# DB_PASSWORD=Electivefinals
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
